<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/layout">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="5dip">

        <TableRow
            android:id="@+id/tableRowLight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/light_level"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewLightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/ic_bulb_on" />
    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/imageView1">

        <Switch
            android:id="@+id/switchLightOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/lightonoff" />
    </LinearLayout>




</RelativeLayout>