<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/spinnerlay">

        <Button
            android:id="@+id/btnAddRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Room"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_room"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="@android:color/white">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight=".30"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnAddLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Light"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spinnerlay"/>

    <ListView
        android:id="@+id/listLights"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnAddLight"
        android:background="@android:color/white"
        android:layout_above="@+id/linearLayoutButtons"
        android:dividerHeight="2dp"
        android:divider="@color/colorAccent">


    </ListView>

    <RelativeLayout
        android:id="@+id/contextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="25dip">

            <TableRow
                android:id="@+id/tableRowLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/light"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewLightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>


        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tableLayout1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_bulb_on" />


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewNoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/noise"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewNoiseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginRight="14dp"
            android:onClick="switchRinger"
            android:text="@string/ringonoff" />
    </LinearLayout>

</RelativeLayout>